Attempt to fix the alignment of the responsive table layout

--- a/_sass/responsive-table.scss
+++ b/_sass/responsive-table.scss
@@ -16,6 +16,10 @@
 
 .responsive-table {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: space-between;
 
   .item {
     display: inline-block;
